--- a/default.htm
+++ b/default.htm
@@ -56,7 +56,7 @@
 		<legend>Event Log</legend>
 		<div id="debug">&nbsp;</div>
 	</fieldset>
-	<div id="copy" class="alignRight">SCORM 1.2 LMS Diagnostic SCO - &copy;2011 Sean K. Friese</div>
+	<div id="copy" class="alignRight">SCORM 1.2 LMS Diagnostic SCO - https://github.com/skfriese/lms-diag</div>
 </div>
 </body>
 </html>
