updates to macros and mass get

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
             <form class="form-inline">
               <div class="form-group">
                 <label for="macros">Macros</label>
-                <select id="macros" class="form-control" size="10">
-                </select>
+                <select id="macros" class="form-control" size="5"></select>
                 <a class="btn btn-default" href="javascript:void(0);" data-click="runMacro">Run</a>
               </div>
             </form>
